# pyproject-template

./: .gitignore  Makefile  README.md  pyproject.toml
