[project]
name = "pyproject-template"
version = "0.1.0"
description = "A python project template."
authors = [
    {name = "Alejandra De Luna", email = "aledelunap@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "ruff>=0.2.1",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "I",
]

[tool.pdm]
distribution = false
